# intelligent-ops-agent

./: Dockerfile  LICENSE  README.md  deploy.sh  docker-compose.yml  pyproject.toml
ops-diagnosis-assistant/: main.py  run_advanced_api.py  run_api.py  run_celery_worker.py
ops-diagnosis-assistant/data/: es_sync.py  sample_data.py
ops-diagnosis-assistant/docker/init/: 01-init-db.sql
ops-diagnosis-assistant/frontend/: gradio_app.py
ops-diagnosis-assistant/src/: celery_app.py  compare_agents.py
ops-diagnosis-assistant/src/api/: advanced_main.py  main.py
ops-diagnosis-assistant/src/core/: advanced_agent.py  knowledge_retriever.py  rag_agent.py  session_manager.py  simple_agent.py
ops-diagnosis-assistant/src/tasks/: diagnosis_tasks.py
ops-diagnosis-assistant/tests/: demo_phase1.py  demo_phase2.py  test_advanced_api.py  test_api.py  test_rag_agent.py  test_simple_agent_v1.py
